Revert "Bugfix: Again, fix the top-alignment of press release columns"
This reverts commit 82c6c10be1f13beea7a725d5047b833c6c542dbe.

This should no longer be needed because we changed the view type being
used and will apply a different theme approach.

--- a/sites/all/themes/genesis_mcneese/css/custom.css
+++ b/sites/all/themes/genesis_mcneese/css/custom.css
@@ -30,6 +30,6 @@ a.nivo-nextNav { background-position:-30px 0; right:15px; }
 a.nivo-prevNav { left:15px; }
 
 /* Ensure that the front page press release photos are top-aligned */
-div.view-id-press_release table.views-view-grid tbody tr td {
+div#block-views-press_release_column-block div.view-press-release-column table.views-view-grid td {
   vertical-align: top;
 }
